# rustfmt-schema

./: Cargo.toml  README.md
src/: consts.rs  lib.rs
