[package]
name = "rustfmt-schema"
version = "0.1.3"
edition = "2021"
authors = ["Echo Maverick <echomaverick976@gmail.com>"]
description = "A Rust module for management of rustfmt-schema"
license = "MIT"
repository = "https://github.com/solEchoForge/rustfmt-schema.git"
keywords = ["rustfmt", "rustfmt-schema", "rust", "cargo", "config"]
categories = ["web-programming", "api-bindings"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tempfile = "3.0"

[[bin]]
name = "rustfmt-schema-cli"
path = "src/bin/cli.rs"

[lib]
name = "rustfmt_schema"
path = "src/lib.rs"
